# Prism

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: appimage.yml  build.yml  release.yml  windows-release.yml
CMakeModules/: FetchOnnxRuntime.cmake  FindFFmpeg.cmake  FindOnnxRuntime.cmake  Findre2.cmake
flatpak/: build.sh  org.cutwire.Prism.desktop  org.cutwire.Prism.metainfo.xml  org.cutwire.Prism.yml
forms/: AudioNodeDialog.ui  ClipEditDialog.ui  ContextNodeDialog.ui  HtmlEditDialog.ui  MainWindow.ui  OutputWindow.ui  ScriptEditDialog.ui  ShaderEditDialog.ui  TextEditDialog.ui  TransformNodeDialog.ui
include/: release.h.in
include/core/: AudioAnalyzer.h  CameraSource.h  ClipManager.h  ColorSource.h  ImageSource.h  MediaSource.h  NdiLibrary.h  NdiSource.h  NetworkUtils.h  OverlayItem.h  ProjectPackager.h  ScreenSource.h  ScriptOutput.h  ScriptRuntime.h  ShaderSource.h  SlideshowSource.h  SourceDescriptor.h  SwitchXH264RtpDepacketizer.h  TextSource.h  ThumbnailExtractor.h  VideoFileSource.h  WebRtcCamPage.h  WebRtcH264Sdp.h  WebRtcManager.h  WebRtcPairing.h  WebRtcSource.h  WindowCaptureSource.h
include/ui/: BasePlacementWidget.h  ClipCard.h  ClipEditDialog.h  ClipNodeEditor.h  ClipNodeModel.h  (+27 more)
resources/: resources.qrc
scripts/: build-windows.ps1  webrtc_signaling_server.py
src/: main.cpp
tests/: CMakeLists.txt  TestSupport.h  test_audio.cpp  test_camerasource.cpp  test_hotkeys.cpp  test_mainwindowutils.cpp  test_packaging.cpp  test_persistence.cpp  test_processnodes.cpp  test_recording.cpp  test_remotecontrol.cpp  test_sources.cpp  test_thumbhelper.cpp  test_videowidget.cpp
(+277 files in other folders)
