# Tests for SwitchX
# TODO: Add unit tests for VideoPlayer and ClipManager

# Placeholder for future tests
# Example:
# find_package(Qt6Test REQUIRED)
# qt_add_executable(tests_switchx
#     test_videoplayer.cpp
# )
# target_link_libraries(tests_switchx PRIVATE Qt6::Test)
# add_test(NAME TestVideoPlayer COMMAND tests_switchx)
